# vacanvy_in_db

./: README.md  pyproject.toml
src/: create_db.py  database_manager.py  get_vacancies_from_hh.py  main.py
tests/: conftest.py  test_create_db.py  test_database_manager.py
